--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "react-native-gesture-handler": "^2.16.0",
     "react-native-gifted-charts": "^1.4.9",
     "react-native-paper": "^5.12.3",
+    "react-native-picker-select": "^9.1.3",
     "react-native-safe-area-context": "4.8.2",
     "react-native-screens": "~3.29.0",
     "react-native-svg": "14.1.0",
