--- a/package.json
+++ b/package.json
@@ -14,23 +14,23 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^14.0.0",
-    "@react-native-async-storage/async-storage": "^1.23.1",
+    "@react-native-async-storage/async-storage": "1.21.0",
     "@react-navigation/native": "^6.0.2",
     "axios": "^1.6.8",
-    "expo": "~50.0.14",
+    "expo": "^51.0.25",
     "expo-font": "~11.10.3",
     "expo-linear-gradient": "~12.7.2",
     "expo-linking": "~6.2.2",
-    "expo-router": "~3.4.8",
-    "expo-splash-screen": "~0.26.4",
+    "expo-router": "^3.5.21",
+    "expo-splash-screen": "^0.27.5",
     "expo-status-bar": "~1.11.1",
-    "expo-system-ui": "~2.9.3",
+    "expo-system-ui": "~2.9.4",
     "expo-web-browser": "~12.8.2",
     "picker": "^0.1.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.73.6",
-    "react-native-gesture-handler": "^2.16.0",
+    "react-native-gesture-handler": "~2.14.0",
     "react-native-gifted-charts": "^1.4.9",
     "react-native-paper": "^5.12.3",
     "react-native-picker-select": "^9.1.3",
@@ -42,6 +42,7 @@
   "devDependencies": {
     "@babel/core": "^7.20.0",
     "@types/react": "~18.2.45",
+    "@types/react-native": "^0.72.8",
     "jest": "^29.2.1",
     "jest-expo": "~50.0.4",
     "react-test-renderer": "18.2.0",
